# ai-router

./: README.md  README.md.backup  ai_router.py  config.yaml  pyproject.toml
.github/: FUNDING.yml
tests/: test_router.py
