[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
[project]
name = "ai-router"
version = "0.1.0"
description = "Ultra-light AI API Router"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
[project.scripts]
ai-router = "ai_router:cli"
